# Sistemas-en-Tiempo-Real-JGLO

./: README.md
ADC_CONTROL_LED/: CMakeLists.txt  README.md  sdkconfig
ADC_CONTROL_LED/main/: CMakeLists.txt  main.c
ESP_WIFI_AP_STA/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP_WIFI_AP_STA/main/: CMakeLists.txt  main.c
Exam_Parcial_1/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Exam_Parcial_1/main/: ADC_NTC.c  ADC_library.c  ADC_library.h  CMakeLists.txt  LED_RGB.h  (+5 more)
Exam_Parcial_2/: CMakeLists.txt
LED_RGB_CONTROL/: CMakeLists.txt  README.md
NTC_CONTROL_UART/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
POT_RGB_DATA_WEB/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
POT_RGB_DATA_WEB/main/: CMakeLists.txt  main.c  tasks_common.h
POT_RGB_DATA_WEB/main/Librerias/Adc_lib/: ADC_NTC_POT.c
POT_RGB_DATA_WEB/main/Librerias/Http_lib/: http_server.c  http_server.h
POT_RGB_DATA_WEB/main/Librerias/Wifi_lib/: wifi_app.c  wifi_app.h
POT_RGB_DATA_WEB/main/webpage/: app.css  app.js  index.html
Task_Status_LED/: CMakeLists.txt  README.md
Web_temperature-esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Web_temperature-esp32/main/: CMakeLists.txt  main.c
Web_temperature-esp32/main/Librerias/Adc_lib/: ADC_NTC_POT.h
Web_temperature-esp32/main/Librerias/Uart_lib/: COMANDS_UART.c  COMANDS_UART.h
Web_temperature-esp32/main/Librerias/Wifi_lib/: wifi_app.c  wifi_app.h
Web_temperature-esp32/main/Librerias/server_lib/: http_server.c  http_server.h
Web_temperature-esp32/main/webpage/: app.css  app.js  index.html
(+10 files in other folders)
